<resources>
    <string name="app_name">PasswordManager</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="need_to_register">Need to register?</string>
    <string name="fehn_gmail_com">fehn@gmail.com</string>
    <string name="_123456">123456</string>
    <string name="stream_activity">Stream Activity</string>
    <string name="enter_name">Enter name</string>
    <string name="register">Register</string>
    <!--  menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_post">Post</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_home">Home</string>
    <string name="action_new">New</string>
    <string name="action_public_trips">Public Trips</string>
    <string name="action_my_trips">My Trips</string>
    <string name="trip_name_label">trip name</string>
    <string name="trip_name_hint">Enter the name</string>
    <string name="trip_details_label">Enter the details</string>
    <string name="trip_desc_hint">Enter the details</string>
    <string name="start_date_label">start date</string>
    <string name="end_date_label">end date</string>
    <string name="trip_public_label">public?</string>
    <string name="trip_error_message">Please make sure to enter a trip name!</string>
    <string name="delete_error_message">You cannot delete a trip that you do not own!</string>
    <string name="post_error_message">You cannot modify a trip that you do not own!</string>
    <string name="trip_error_title">Error!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_me_up_button_label">SIGN ME UP</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered an email address, password, and name.</string>
    <string name="empty_field_login_error">Please enter an email address and password.</string>
    <string name="invalid_email_error">Please enter a valid email address.</string>
    <string name="password_six_characters_error">You password must contain at least 6 characters.</string>
    <string name="password_cannot_equal_email_error">Your password and email address may not be the same.</string>
    <string name="progress_title">Please Wait!</string>
    <string name="progress_sign_up_message">Creating and registering your account...</string>
    <string name="progress_login_message">Logging in...</string>
    <string name="trip_list_text">Trip List</string>
    <string name="trip_details_text">Trip Details</string>
    <string name="start_date_hint">Select a Start Date:</string>
    <string name="end_date_hint">Select an End Date:</string>
    <string name="delete_error_title">Permission Denied!</string>
    <string name="post_error_title">Permission Denied!</string>
    <string name="filter_name">Search</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>